--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -58,16 +58,17 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           
-      - name: 涡轮增雕进程
+      - name: add theme
         run: |
           cd package
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
           git clone https://github.com/Ameykyl/luci-app-koolproxyR
+          git clone https://github.com/Lienol/openwrt-package
           
-      - name: 涡轮增雕进程
-        run: cd openwrt && echo -e "\nsrc-git lienol https://github.com/Lienol/openwrt-package" >> feeds.conf.default
+#      - name: 涡轮增雕进程
+#        run: cd openwrt && echo -e "\nsrc-git lienol https://github.com/Lienol/openwrt-package" >> feeds.conf.default
         
       - name: Generate configuration file
         run: |
@@ -179,6 +180,7 @@ jobs:
            CONFIG_PACKAGE_luci-theme-argon=y
            CONFIG_PACKAGE_luci-theme-atmaterial=y
            CONFIG_PACKAGE_luci-app-koolproxyR=y
+           CONFIG_PACKAGE_trojan=y
           # CONFIG_PACKAGE_luci-theme-netgear=y
            EOF
 
